# x402-batch-settlement

./: .gitignore  Cargo.toml  README.md  config.example.toml
crates/x402/: Cargo.toml  README.md
crates/x402/src/: batch_settlement.rs  codec.rs  error.rs  exact_evm.rs  facilitator.rs  lib.rs  network.rs  payment.rs
crates/x402/tests/: batch_settlement.rs  roundtrip.rs
docs/: ARCHITECTURE.md  DECISIONS.md  x402-rs-contribution.md  x402-rust-notes.md  x402-spec-feedback.md
poc-x402-llm/: Cargo.toml
poc-x402-llm/src/: cache.rs  config.rs  error.rs  facilitator.rs  main.rs  provider.rs
test-agent/: index-batch.mjs  index.mjs  package-lock.json  package.json
