[package]
name = "poc-x402-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
x402 = { path = "../crates/x402" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
figment = { version = "0.10", features = ["toml", "env"] }
