[package]
name = "x402"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "x402 V2 in Rust: wire types and the batch-settlement EVM cryptographic core (EIP-712 channel/voucher, claim/settle)"
readme = "README.md"
authors = ["Adel Kaleche <kaleche@gmail.com>"]
repository = "https://github.com/Adelagric/x402-batch-settlement"
keywords = ["x402", "payments", "agents", "http"]
categories = ["web-programming", "api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
tiny-keccak = { version = "2", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa"] }

[dev-dependencies]
proptest = "1"
